--- a/Building Deep Neural Network.ipynb
+++ b/Building Deep Neural Network.ipynb
@@ -1,8 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Building Deep Neural Network"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +20,7 @@
     "from dnn_utils import sigmoid, sigmoid_backward, relu, relu_backward\n",
     "\n",
     "%matplotlib inline\n",
-    "plt.rcParams['figure.figsize'] = (5.0, 4.0) \n",
+    "plt.rcParams['figure.figsize'] = (5.0, 4.0) # set default size of plots\n",
     "plt.rcParams['image.interpolation'] = 'nearest'\n",
     "plt.rcParams['image.cmap'] = 'gray'\n",
     "\n",
@@ -24,21 +31,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "\n",
+    "\n",
+    "<img src=\"images/final outline.png\" style=\"width:800px;height:500px;\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "##  Initialization\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "\n",
     "def initialize_parameters(n_x, n_h, n_y):\n",
-    "    \n",
+    "   \n",
     "    np.random.seed(1)\n",
     "    \n",
-    "   \n",
     "    W1 = np.random.randn(n_h, n_x) * 0.01\n",
     "    b1 = np.zeros(shape=(n_h, 1))\n",
     "    W2 = np.random.randn(n_y, n_h) * 0.01\n",
     "    b2 = np.zeros(shape=(n_y, 1))\n",
-    "    \n",
     "    \n",
     "    assert(W1.shape == (n_h, n_x))\n",
     "    assert(b1.shape == (n_h, 1))\n",
@@ -50,14 +79,29 @@
     "                  \"W2\": W2,\n",
     "                  \"b2\": b2}\n",
     "    \n",
-    "    return parameters"
+    "    return parameters    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 3,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 0.01624345 -0.00611756]\n",
+      " [-0.00528172 -0.01072969]]\n",
+      "b1 = [[ 0.]\n",
+      " [ 0.]]\n",
+      "W2 = [[ 0.00865408 -0.02301539]]\n",
+      "b2 = [[ 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "parameters = initialize_parameters(2,2,1)\n",
     "print(\"W1 = \" + str(parameters[\"W1\"]))\n",
@@ -67,22 +111,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "###  L-layer Neural Network\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "def initialize_parameters_deep(layer_dims):\n",
     "   \n",
     "    np.random.seed(3)\n",
     "    parameters = {}\n",
-    "    L = len(layer_dims)           \n",
-    "\n",
+    "    L = len(layer_dims)            \n",
     "    for l in range(1, L):\n",
-    "       \n",
-    "        parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l - 1]) * 0.01\n",
+    "         parameters['W' + str(l)] = np.random.randn(layer_dims[l], layer_dims[l - 1]) * 0.01\n",
     "        parameters['b' + str(l)] = np.zeros((layer_dims[l], 1))\n",
-    "   \n",
     "        \n",
     "        assert(parameters['W' + str(l)].shape == (layer_dims[l], layer_dims[l - 1]))\n",
     "        assert(parameters['b' + str(l)].shape == (layer_dims[l], 1))\n",
@@ -93,9 +145,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 0.01788628  0.0043651   0.00096497 -0.01863493 -0.00277388]\n",
+      " [-0.00354759 -0.00082741 -0.00627001 -0.00043818 -0.00477218]\n",
+      " [-0.01313865  0.00884622  0.00881318  0.01709573  0.00050034]\n",
+      " [-0.00404677 -0.0054536  -0.01546477  0.00982367 -0.01101068]]\n",
+      "b1 = [[ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]]\n",
+      "W2 = [[-0.01185047 -0.0020565   0.01486148  0.00236716]\n",
+      " [-0.01023785 -0.00712993  0.00625245 -0.00160513]\n",
+      " [-0.00768836 -0.00230031  0.00745056  0.01976111]]\n",
+      "b2 = [[ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]]\n"
+     ]
+    }
+   ],
    "source": [
     "parameters = initialize_parameters_deep([5,4,3])\n",
     "print(\"W1 = \" + str(parameters[\"W1\"]))\n",
@@ -105,15 +178,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Forward propagation module\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def linear_forward(A, W, b):\n",
-    "   \n",
-    "    Z = np.dot(W, A) + b\n",
     "\n",
+    "\n",
+    "def linear_forward(A, W, b):\n",
+    "    \n",
+    "    Z = np.dot(W, A) + b\n",
+    "  \n",
     "    \n",
     "    assert(Z.shape == (W.shape[0], A.shape[1]))\n",
     "    cache = (A, W, b)\n",
@@ -123,9 +205,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Z = [[ 3.1980455   7.85763489]]\n"
+     ]
+    }
+   ],
    "source": [
     "A, W, b = linear_forward_test_case()\n",
     "\n",
@@ -134,26 +224,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Linear-Activation Forward\n",
+    "\n",
+    " $\\sigma(Z) = \\sigma(W A + b) = \\frac{1}{ 1 + e^{-(W A + b)}}$. \n",
+    " \n",
+    " $A = RELU(Z) = max(0, Z)$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def linear_activation_forward(A_prev, W, b, activation):\n",
     "  \n",
     "    \n",
     "    if activation == \"sigmoid\":\n",
-    "       \n",
-    "     \n",
     "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
     "        A, activation_cache = sigmoid(Z)\n",
-    "     \n",
+    "       \n",
     "    elif activation == \"relu\":\n",
-    "   \n",
     "        Z, linear_cache = linear_forward(A_prev, W, b)\n",
     "        A, activation_cache = relu(Z)\n",
-    "   \n",
-    "    \n",
+    "        \n",
     "    assert (A.shape == (W.shape[0], A_prev.shape[1]))\n",
     "    cache = (linear_cache, activation_cache)\n",
     "\n",
@@ -162,9 +261,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "With sigmoid: A = [[ 0.96076066  0.99961336]]\n",
+      "With ReLU: A = [[ 3.1980455   7.85763489]]\n"
+     ]
+    }
+   ],
    "source": [
     "A_prev, W, b = linear_activation_forward_test_case()\n",
     "\n",
@@ -176,33 +284,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  L-Layer Model \n",
+    "\n",
+    "<img src=\"images/model_architecture_kiank.png\" style=\"width:600px;height:300px;\">\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def L_model_forward(X, parameters):\n",
-    "    \n",
     "\n",
+    "\n",
+    "def L_model_forward(X, parameters):\n",
+    " \n",
     "    caches = []\n",
     "    A = X\n",
     "    L = len(parameters) // 2                  \n",
-    "    \n",
     "    for l in range(1, L):\n",
     "        A_prev = A \n",
-    "       \n",
     "        A, cache = linear_activation_forward(A_prev, \n",
     "                                             parameters['W' + str(l)], \n",
     "                                             parameters['b' + str(l)], \n",
     "                                             activation='relu')\n",
     "        caches.append(cache)\n",
     "        \n",
+    "      \n",
     "    AL, cache = linear_activation_forward(A, \n",
     "                                          parameters['W' + str(L)], \n",
     "                                          parameters['b' + str(L)], \n",
     "                                          activation='sigmoid')\n",
     "    caches.append(cache)\n",
-    "\n",
+    "    \n",
+    "   \n",
     "    assert(AL.shape == (1, X.shape[1]))\n",
     "            \n",
     "    return AL, caches"
@@ -210,9 +328,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "AL = [[ 0.0844367   0.92356858]]\n",
+      "Length of caches list = 2\n"
+     ]
+    }
+   ],
    "source": [
     "X, parameters = L_model_forward_test_case()\n",
     "AL, caches = L_model_forward(X, parameters)\n",
@@ -221,19 +348,26 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##  Cost function\n",
+    "\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def compute_cost(AL, Y):\n",
-    "   \n",
+    " \n",
     "    \n",
     "    m = Y.shape[1]\n",
-    "\n",
-    "\n",
     "    cost = (-1 / m) * np.sum(np.multiply(Y, np.log(AL)) + np.multiply(1 - Y, np.log(1 - AL)))\n",
-    "\n",
     "    \n",
     "    cost = np.squeeze(cost)     \n",
     "    assert(cost.shape == ())\n",
@@ -243,9 +377,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cost = 0.414931599615\n"
+     ]
+    }
+   ],
    "source": [
     "Y, AL = compute_cost_test_case()\n",
     "\n",
@@ -253,13 +395,42 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "## Backward propagation module\n",
+    "\n",
+    "<img src=\"images/backprop_kiank.png\" style=\"width:650px;height:250px;\">\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###  Linear backward\n",
+    "\n",
+    "\n",
+    "<img src=\"images/linearback_kiank.png\" style=\"width:250px;height:300px;\">\n",
+    "<caption><center> **Figure 4** </center></caption>\n",
+    "\n",
+    "The three outputs $(dW^{[l]}, db^{[l]}, dA^{[l]})$ are computed using the input $dZ^{[l]}$.\n",
+    "$$ dW^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial W^{[l]}} = \\frac{1}{m} dZ^{[l]} A^{[l-1] T} \\tag{8}$$\n",
+    "$$ db^{[l]} = \\frac{\\partial \\mathcal{L} }{\\partial b^{[l]}} = \\frac{1}{m} \\sum_{i = 1}^{m} dZ^{[l](i)}\\tag{9}$$\n",
+    "$$ dA^{[l-1]} = \\frac{\\partial \\mathcal{L} }{\\partial A^{[l-1]}} = W^{[l] T} dZ^{[l]} \\tag{10}$$\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def linear_backward(dZ, cache):\n",
-    "   \n",
+    "    \n",
     "    A_prev, W, b = cache\n",
     "    m = A_prev.shape[1]\n",
     "\n",
@@ -267,7 +438,7 @@
     "    dW = np.dot(dZ, cache[0].T) / m\n",
     "    db = np.squeeze(np.sum(dZ, axis=1, keepdims=True)) / m\n",
     "    dA_prev = np.dot(cache[1].T, dZ)\n",
-    "   \n",
+    "  \n",
     "    \n",
     "    assert (dA_prev.shape == A_prev.shape)\n",
     "    assert (dW.shape == W.shape)\n",
@@ -278,9 +449,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dA_prev = [[  2.38272385   5.85438014]\n",
+      " [  6.31969219  15.52755701]\n",
+      " [ -3.97876302  -9.77586689]]\n",
+      "dW = [[ 2.77870358 -0.05500058 -5.13144969]]\n",
+      "db = 5.527840195\n"
+     ]
+    }
+   ],
    "source": [
     "\n",
     "dZ, linear_cache = linear_backward_test_case()\n",
@@ -292,26 +475,37 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "###  Linear-Activation backward\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "\n",
     "def linear_activation_backward(dA, cache, activation):\n",
     "    \n",
     "    linear_cache, activation_cache = cache\n",
     "    \n",
     "    if activation == \"relu\":\n",
-    "    \n",
+    "        \n",
     "        dZ = relu_backward(dA, activation_cache)\n",
-    "       \n",
+    "        \n",
     "        \n",
     "    elif activation == \"sigmoid\":\n",
-    "     \n",
+    "      \n",
     "        dZ = sigmoid_backward(dA, activation_cache)\n",
     "      \n",
     "    \n",
-    "\n",
+    "  \n",
     "    dA_prev, dW, db = linear_backward(dZ, linear_cache)\n",
     "    \n",
     "    return dA_prev, dW, db"
@@ -319,9 +513,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sigmoid:\n",
+      "dA_prev = [[ 0.08982777  0.00226265]\n",
+      " [ 0.23824996  0.00600122]\n",
+      " [-0.14999783 -0.00377826]]\n",
+      "dW = [[-0.06001514 -0.09687383 -0.10598695]]\n",
+      "db = 0.061800984273\n",
+      "\n",
+      "relu:\n",
+      "dA_prev = [[  2.38272385   5.85438014]\n",
+      " [  6.31969219  15.52755701]\n",
+      " [ -3.97876302  -9.77586689]]\n",
+      "dW = [[ 2.77870358 -0.05500058 -5.13144969]]\n",
+      "db = 5.527840195\n"
+     ]
+    }
+   ],
    "source": [
     "AL, linear_activation_cache = linear_activation_backward_test_case()\n",
     "\n",
@@ -339,44 +553,70 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "###  L-Model Backward \n",
+    "\n",
+    "\n",
+    "<img src=\"images/mn_backward.png\" style=\"width:450px;height:300px;\">\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "# GRADED FUNCTION: L_model_backward\n",
+    "\n",
     "def L_model_backward(AL, Y, caches):\n",
-    "    \n",
+    "   \n",
     "    grads = {}\n",
-    "    L = len(caches) \n",
+    "    L = len(caches) # the number of layers\n",
     "    m = AL.shape[1]\n",
-    "    Y = Y.reshape(AL.shape) \n",
+    "    Y = Y.reshape(AL.shape) # after this line, Y is the same shape as AL\n",
     "    \n",
     "    \n",
     "    dAL = dAL = - (np.divide(Y, AL) - np.divide(1 - Y, 1 - AL))\n",
-    "  \n",
-    "    \n",
-    "    \n",
+    "   \n",
     "    current_cache = caches[-1]\n",
     "    grads[\"dA\" + str(L)], grads[\"dW\" + str(L)], grads[\"db\" + str(L)] = linear_backward(sigmoid_backward(dAL, \n",
     "                                                                                                        current_cache[1]), \n",
-    "                         \n",
-    "     for l in reversed(range(L-1)):\n",
-    "        \n",
+    "                                                                                       current_cache[0])\n",
+    "    \n",
+    "    \n",
+    "    for l in reversed(range(L-1)):\n",
+    "      \n",
     "        current_cache = caches[l]\n",
     "        dA_prev_temp, dW_temp, db_temp = linear_backward(sigmoid_backward(dAL, current_cache[1]), current_cache[0])\n",
     "        grads[\"dA\" + str(l + 1)] = dA_prev_temp\n",
     "        grads[\"dW\" + str(l + 1)] = dW_temp\n",
     "        grads[\"db\" + str(l + 1)] = db_temp\n",
-    "       \n",
+    "        \n",
     "\n",
     "    return grads"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dW1 = [[-0.09686122 -0.04840482 -0.11864308]]\n",
+      "db1 = -0.262594998379\n",
+      "dA1 = [[-0.71011462 -0.22925516]\n",
+      " [-0.17330152 -0.05594909]\n",
+      " [-0.03831107 -0.01236844]]\n"
+     ]
+    }
+   ],
    "source": [
     "X_assess, Y_assess, AL, caches = L_model_backward_test_case()\n",
     "grads = L_model_backward(AL, Y_assess, caches)\n",
@@ -386,28 +626,68 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "###  Update Parameters\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
+    "\n",
+    "\n",
     "def update_parameters(parameters, grads, learning_rate):\n",
-    "\n",
     "    \n",
-    "    L = len(parameters) // 2\n",
+    "    \n",
+    "    L = len(parameters) // 2 # number of layers in the neural network\n",
     "\n",
+    "   \n",
     "    for l in range(L):\n",
     "        parameters[\"W\" + str(l + 1)] = parameters[\"W\" + str(l + 1)] - learning_rate * grads[\"dW\" + str(l + 1)]\n",
     "        parameters[\"b\" + str(l + 1)] = parameters[\"b\" + str(l + 1)] - learning_rate * grads[\"db\" + str(l + 1)]\n",
-    "\n",
+    "   \n",
     "    return parameters"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "W1 = [[ 1.72555789  0.3700272   0.07818896]\n",
+      " [-1.8634927  -0.2773882  -0.35475898]\n",
+      " [-0.08274148 -0.62700068 -0.04381817]\n",
+      " [-0.47721803 -1.31386475  0.88462238]]\n",
+      "b1 = [[-0.07593768]\n",
+      " [-0.07593768]\n",
+      " [-0.07593768]\n",
+      " [-0.07593768]]\n",
+      "W2 = [[ 0.71838378  1.70957306  0.05003364 -0.40467741]\n",
+      " [-0.54535995 -1.54647732  0.98236743 -1.10106763]\n",
+      " [-1.18504653 -0.2056499   1.48614836  0.23671627]]\n",
+      "b2 = [[-0.08616376]\n",
+      " [-0.08616376]\n",
+      " [-0.08616376]]\n",
+      "W3 = [[-0.88352436 -0.7129932   0.62524497]\n",
+      " [-0.02025258 -0.76883635 -0.23003072]]\n",
+      "b3 = [[ 0.08416196]\n",
+      " [ 0.08416196]]\n"
+     ]
+    }
+   ],
    "source": [
     "parameters, grads = update_parameters_test_case()\n",
     "parameters = update_parameters(parameters, grads, 0.1)\n",
@@ -422,6 +702,11 @@
   }
  ],
  "metadata": {
+  "coursera": {
+   "course_slug": "neural-networks-deep-learning",
+   "graded_item_id": "c4HO0",
+   "launcher_item_id": "lSYZM"
+  },
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -441,5 +726,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
